<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="437dp"
        android:layout_height="508dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/background_bottom"
        android:backgroundTint="#FFFFD1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="344dp"
        android:layout_height="616dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="52dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="#0FFFFFFF"
            android:contentDescription="arrow"
            app:layout_constraintEnd_toStartOf="@+id/tvEditDonation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/tvEditDonation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="60dp"
            android:text="@string/updateDonation"
            android:textColor="#343434"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="93dp"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="234dp"
            android:text="@string/tvTitle"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEditDonation" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="216dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="114dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/EditTextTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvDescriptionAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="200dp"
            android:text="@string/tvDescriptionAdd"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="297dp"
            android:layout_height="68dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="26dp"
            android:autoText="false"
            android:elegantTextHeight="false"
            android:ems="10"
            android:freezesText="false"
            android:inputType="textPersonName"
            android:hint="@string/EditTextDescription"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionAdd" />

        <EditText
            android:id="@+id/editTextAmountNeeded"
            android:layout_width="217dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="111dp"
            android:ems="10"
            android:hint="00.00"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAmount" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="235dp"
            android:text="@string/tvAmount"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextContact" />

        <EditText
            android:id="@+id/editTextStartDate"
            android:layout_width="112dp"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="date"
            android:text="@string/Date1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStartDate"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="36dp"
            android:text="@string/tvEndDate"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAmountNeeded" />

        <EditText
            android:id="@+id/editTextEndDate"
            android:layout_width="112dp"
            android:layout_height="54dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="date"
            android:text="@string/Date2"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/editTextStartDate"
            app:layout_constraintTop_toBottomOf="@+id/tvEndDate"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvStart"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAmountNeeded" />

        <EditText
            android:id="@+id/editTextContact"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="114dp"
            android:ems="10"
            android:hint="@string/number"
            android:inputType="number|textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="113dp"
        android:layout_height="51dp"
        android:layout_marginStart="261dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="37dp"
        android:text="@string/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>