<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/regAsAGiverRegT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/regAsAGiverRegT"
        android:textColor="#cdedef"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/regAsAGiverName"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_edittext_background"
        android:backgroundTint="#f4e5fe"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/regAsAGiverName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regAsAGiverRegT" />

    <EditText
        android:id="@+id/regAsAGiverRePassword"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edittext_background"
        android:backgroundTint="#f4e5fe"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/regAsAGiverRePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regAsAGiverPassword" />

    <EditText
        android:id="@+id/regAsAGiverEmail"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edittext_background"
        android:backgroundTint="#f4e5fe"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/regAsAGiverEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regAsAGiverName" />

    <EditText
        android:id="@+id/regAsAGiverPassword"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edittext_background"
        android:backgroundTint="#f4e5fe"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/regAsAGiverPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regAsAGiverTel" />

    <EditText
        android:id="@+id/regAsAGiverTel"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edittext_background"
        android:backgroundTint="#f4e5fe"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/regAsAGiverTel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regAsAGiverUname" />

    <EditText
        android:id="@+id/regAsAGiverUname"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edittext_background"
        android:backgroundTint="#f4e5fe"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/regAsAGiverUname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regAsAGiverEmail" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="322dp"
        android:layout_marginBottom="131dp"
        android:backgroundTint="#000000"
        android:contentDescription="back"
        android:onClick="displayUserWelcome"
        app:layout_constraintBottom_toTopOf="@+id/regAsAGiverName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regAsAGiverRePassword"
        app:layout_constraintVertical_bias="0.198" />

</androidx.constraintlayout.widget.ConstraintLayout>