<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bac"
        android:layout_width="600dp"
        android:layout_height="389dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#000000"
            android:contentDescription="back"
            android:onClick="displayWelcomePage"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/RegWelcomeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/RegWelcomeTxt"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_Reg"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#343434"
        android:onClick="displayRegisterPage"
        android:text="@string/button_Reg"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="#343434"
        android:text="@string/button_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="187dp"
        android:layout_height="145dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="-50dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/button_Reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bac"
        app:srcCompat="@drawable/d3bf34d09e3197879da2df5a0a9aae63" />

</androidx.constraintlayout.widget.ConstraintLayout>